8210320: PPC64: Fix uninitialized variable in C1 LIR assembler code

Reviewed-by: mbaesken, shade, mdoerr